[package]
name = "chess-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [ 
    "crates/engine",
    "crates/external-uci"
]

[dependencies]
engine = { path = "crates/engine" }
external-uci = { path = "crates/external-uci" }

termion = "4.0.0"
clap = { version = "4.5.4", features = [ "derive" ] }
async-uci = "0.1.3"
tokio = "1.37.0"

[features]
default = [ "dbg-assert" ]
dbg-assert = []
