[package]
name = "chess-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [ 
    "crates/engine",
    "crates/external-uci", 
    "crates/proc_macro_utils", 
    "crates/uci"
]

[workspace.dependencies]
proc_macro_utils = { path = "crates/proc_macro_utils" }
engine = { path = "crates/engine" }

[dependencies]
engine.workspace = true

tokio = "1.37.0"
external-uci = { path = "crates/external-uci" }
uci = { path = "crates/uci" }

termion = "4.0.0"
clap = { version = "4.5.4", features = [ "derive" ] }

[features]
default = [ "dbg-assert" ]
dbg-assert = []
